--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ typings/
 
 # next.js build output
 .next
-
+*-lock.*
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -246,3 +246,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+/package-lock.json
